<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/orange_dark"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewRegisterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="7dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:cardCornerRadius="8dp">

        <EditText
            android:id="@+id/edtxtRegisterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/hintName"
            android:inputType="text|textAutoComplete"
            android:padding="10dp" />

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewRegisterEmail"
        android:layout_below="@id/cardViewRegisterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="7dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:cardCornerRadius="7dp">

        <EditText
            android:id="@+id/edtxtRegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="textEmailAddress"
            android:hint="@string/hintEmailAddress"
            android:padding="10dp" />

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewRegisterMobileNumber"
        android:layout_below="@id/cardViewRegisterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="7dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:cardCornerRadius="7dp">

        <EditText
            android:id="@+id/edtxtRegisterMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="number"
            android:hint="@string/hintMobileNumber"
            android:padding="10dp" />

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewRegisterAddress"
        android:layout_below="@id/cardViewRegisterMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="30dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:cardCornerRadius="7dp">

        <EditText
            android:id="@+id/edtxtRegisterAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="text|textAutoComplete"
            android:hint="@string/hintDeliveryAddress"
            android:padding="10dp" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_below="@id/cardViewRegisterAddress"
        android:id="@+id/cardViewRegisterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="30dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:cardCornerRadius="7dp">

        <EditText
            android:id="@+id/edtxtRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="textPassword"
            android:hint="@string/hintPassword"
            android:padding="10dp" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewRegisterConfirmPassword"
        android:layout_width="match_parent"
        android:layout_below="@id/cardViewRegisterPassword"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="30dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:cardCornerRadius="7dp">

        <EditText
            android:id="@+id/edtxtRegisterConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="textPassword"
            android:hint="@string/hintConfirmPassword"
            android:padding="10dp" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewRegisterSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardViewRegisterConfirmPassword"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="7dp"
        app:cardCornerRadius="8dp">

        <Button
            android:id="@+id/btnRegisterSignInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/register" />

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>