<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_dark"
    tools:context=".activity.ResetPasswordActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewResetPasswordOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="7dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:cardCornerRadius="8dp">

        <EditText
            android:id="@+id/edtxtResetPasswordOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/hintOTP"
            android:inputType="number"
            android:padding="10dp" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_below="@id/cardViewResetPasswordOTP"
        android:id="@+id/cardViewResetPasswordPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="7dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:cardCornerRadius="8dp">

        <EditText
            android:id="@+id/edtxtResetPasswordPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"
            android:padding="10dp" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewResetPasswordConfirmPassword"
        android:layout_below="@id/cardViewResetPasswordPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="7dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:cardCornerRadius="8dp">

        <EditText
            android:id="@+id/edtxtResetPasswordConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/hintConfirmPassword"
            android:inputType="textPassword"
            android:padding="10dp" />

    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/CardViewLoginSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardViewResetPasswordConfirmPassword"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="7dp"
        app:cardCornerRadius="8dp">

        <Button
            android:id="@+id/btnResetPasswordSubmit"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit" />

    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>