<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_dark"
    tools:context=".activity.ForgotPasswordActivity">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewForgotPasswordAppIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        app:cardCornerRadius="8dp">

        <ImageView
            android:id="@+id/imgForgotPasswordAppIcon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_launcher_background" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_below="@id/cardViewForgotPasswordAppIcon"
        android:id="@+id/cardViewForgotPasswordMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="30dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:cardCornerRadius="7dp"
        tools:ignore="ExtraText">

        <EditText
            android:id="@+id/edtxtForgotPasswordMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="number"
            android:hint="@string/hintMobileNumber"
            android:padding="10dp" />
`
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewForgotPasswordEmail"
        android:layout_below="@id/cardViewForgotPasswordMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="30dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:cardCornerRadius="7dp">

        <EditText
            android:id="@+id/edtxtForgotPasswordEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="textEmailAddress"
            android:hint="@string/hintEmailAddress"
            android:padding="10dp" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/CardViewLoginSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardViewForgotPasswordEmail"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="7dp"
        app:cardCornerRadius="8dp">

        <Button
            android:id="@+id/btnForgotPasswordNextButton"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next" />

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>